--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="title_activity_developer_tools">DeveloperTools</string>
     <string name="title_activity_record_fuel">RecordFuelActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="lbl_vehicle">Vehicle</string>
+    <string name="lbl_costPerVolume">£ / l</string>
 </resources>
